# adventofcode

./: .gitignore  README.md  adapter_array.py  allergen_assessment.py  binary_boarding.py  conway_cubes.py  crab_combat.py  crab_cups.py  crab_cups_faster.py  docking_data.py  encoding_error.py  handheld_halting.py  jurassic_jigsaw.py  monster_messages.py  operation_order.py  passport_processing.py  password_philosophy.py  rain_risk.py  report_repair.py  seating_system.py  ticket_translation.py  toboggan_trajectory.py
2020/: README.md
2020/2020_Cpp/src/: day01.cpp  main.cpp
2020/2020_Python/: README.md  allergen_assessment.py  combo_breaker.py  custom_customs.py  custom_customs_but_smaller.py  docking_data.py  jurassic_jigsaw.py  operation_order.py
2020_Cpp/: CMakeLists.txt  README.md
2020_Cpp/src/: advent2020.h  day01.cpp  day02.cpp  main.cpp  report_repair.cpp  utils.h
2020_Cpp/utils/: utils.h
2020_Python/: adapter_array.py  conway_cubes.py  encoding_error.py  handy_haversacks.py  jurassic_jigsaw.py  lobby_layout.py  monster_messages.py  passport_processing.py  rambunctious_recitation.py  shuttle_search.py
2021/: README.md
2021/python-solutions/src/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day24.py  day25.py
2021/rust-solutions/: Cargo.toml  README.md
2021/rust-solutions/src/: day01.rs  (+2 more)
2022/: README.md
2023/: README.md
2023/python-solutions/: makefile
2024/: README.md
(+66 files in other folders)
